<resources>
    <string name="app_name">UBConnect</string>
    <string name="facebook_app_id">2223673594426780</string>
    <string name="fb_login_protocol_scheme">fb2223673594426780</string>

    <string name="your_answer">Your Answer</string>
    <string name="your_result">Your Result</string>
    <string name="the_answer">The Answer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_post_question">Post Question</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_current_question">Current Question</string>
    <string name="menu_continue_answering">Continue Answering</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_post_question">PostQuestionActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="menu_question">Question</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_showall">Search</string>

    <string name="authorization">Auth</string>

    <string name="linear_layout">Linear Layout</string>
    <string name="title_activity_no_answer">NoAnswerActivity</string>
    <string name="title_activity_no_question">NoQuestionActivity</string>
</resources>
