<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_post_question"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_post_question" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Current Work">
        <menu>
            <item
                android:id="@+id/nav_current_question"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_current_question" />
            <item
                android:id="@+id/nav_continue_answering"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_continue_answering" />
        </menu>
    </item>

</menu>
